# app/serializers/category_serializer.rb
@@ -1,8 +1,0 @@
-class CategorySerializer < ActiveModel::Serializer
-  attributes :id, :name, :words
-  def words
-    object.words.map do |word|
-      { name: word.name }
-    end
-  end
-end
